--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ tmp/
 *.swp
 *~.nib
 local.properties
-#.settings/
+.settings/
 .loadpath
 .recommenders
 
@@ -75,10 +75,10 @@ local.properties
 .sts4-cache/
 
 # Eclipse Core
-#.project
+.project
 
 # IDT-specific (Eclipse Java Development Tools)
-#.classpath
+.classpath
 
 ### Java ###
 # Compiled class file
