--- a/studyCafe/pom.xml
+++ b/studyCafe/pom.xml
@@ -230,7 +230,28 @@
 		    <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/ojdbc6.jar</systemPath>
 		</dependency>
 		
-		
+		<!-- JSON  
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.5.4</version>
+		</dependency>--> 
+		<!-- JSON을 Java Object로 변환,Java Object를  JSON형태로 변환 라이브러리
+			jackson-annotations라이브러리 &
+			jackson-core라이브러리에 의존
+		-->
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.14.2</version>
+		</dependency>
+		<dependency>
+		    <groupId>net.sf.json-lib</groupId>
+		    <artifactId>json-lib</artifactId>
+		    <version>2.4</version>
+		    <classifier>jdk15</classifier>    
+		</dependency>
 		          
 	</dependencies>
 	<!-- build요소 : 빌드정보 -->
