종범님 기능들 경로 전부 수정

--- a/studyCafe/src/main/webapp/META-INF/maven/com.studycafe/scafe/pom.xml
+++ b/studyCafe/src/main/webapp/META-INF/maven/com.studycafe/scafe/pom.xml
@@ -246,7 +246,44 @@
 			<artifactId>tiles-servlet</artifactId>
 			<version>2.2.2</version>
 		</dependency> 
-		
+		<!-- JSON  
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.5.4</version>
+		</dependency>--> 
+		<!-- JSON을 Java Object로 변환,Java Object를  JSON형태로 변환 라이브러리
+			jackson-annotations라이브러리 &
+			jackson-core라이브러리에 의존
+		-->
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+		    <groupId>net.sf.json-lib</groupId>
+		    <artifactId>json-lib</artifactId>
+		    <version>2.4</version>
+		    <classifier>jdk15</classifier>    
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-core</artifactId>
+				<version>2.13.3</version>
+		</dependency>
+<!--
+ https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind 
+-->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>2.13.3</version>
+		</dependency>
+<!--
+ https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations 
+-->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-annotations</artifactId>
+				<version>2.13.3</version>
+		</dependency>
 	</dependencies>
 	<!-- build요소 : 빌드정보 -->
     <build>
